<resources>
    <string name="app_name">FalconIntel</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_maft">Fill Time</string>
    <string name="title_misc1">Misc 1</string>
    <string name="title_misc2">Misc 2</string>
    <string name="metal_temp">1175</string>
    <string name="die_temp">50</string>
    <string name="al_alloy">Aluminum Alloy</string>
    <string name="calc_button">Calculate</string>
    <string name="die_temp_correct">350</string>
    <string name ="slow_shot_velocity">Slow Shot Velocity</string>
    <string name="plunge_dia">2.50</string>
    <string name="shot_sleeve_length">19.0</string>
    <string name="ladled">0.0</string>
    <string name="volume">Volume Ladled:</string>
    <string name="pound">Pounds ladled:</string>
    <string name="v">cm3</string>
    <string name="p">lb</string>
    <string name="title_activity_ms">MS</string>
    <string name="tab_1">Physical Properties</string>
    <string name="tab_2">Chemical Composition</string>
    <string name="percent"> %</string>



    <string name="action_settings">Settings</string>
    <string name="add_metal">Add Metal Alloy</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="mva">Minimum Vent Area</string>
    <string name="lt">Locking Tonnage</string>
    <string name="mas">Metal Alloy Selector</string>
    <string name="logo">logo</string>
    <string name="title_activity_mas__db">MAS_DB</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="projected_height_in">Projected Height (in.)</string>
    <string name="_0_0">0.0</string>
    <string name="_0">0</string>
    <string name="projected_width_in">Projected Width (in.)</string>
    <string name="inch">\"</string>
    <string name="runner_overlow_percentage">Runner/Overlow Percentage</string>
    <string name="per">%</string>
    <string name="pressure">Pressure</string>
    <string name="_1000">1000</string>
    <string name="psi">psi</string>
    <string name="tons">tons</string>
    <string name="analysis">Analysis</string>
    <string name="minimum_vent_area">Minimum Vent Area</string>
    <string name="seconds">seconds</string>
    <string name="die_temperature_f">Die Temperature (°F)</string>
    <string name="metal_temperature_f">Metal Temperature (°F)</string>
    <string name="percent_solids">Percent Solids</string>
    <string name="wall_thickness_in">Wall Thickness (in.)</string>
    <string name="metal_alloy">Metal Alloy</string>
    <string name="max_allowable_fill_time">Max Allowable Fill Time</string>
    <string name="press_and_hold_to_delete">Press and hold to delete.</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="n_mm2">N/mm2</string>
    <string name="yield_strength_mpa">Yield Strength [MPa]</string>
    <string name="alloy_filter_settings">Alloy Filter Settings</string>
    <string name="corrosion_resistance">Corrosion Resistance</string>
    <string name="save">Save</string>
    <string name="tensile_strength_mpa">Tensile Strength [MPa]</string>
    <string name="fatigue_strength_mpa">Fatigue Strength [MPa]</string>
    <string name="clear">Clear</string>
    <string name="percent_elongation">Percent Elongation</string>
    <string name="new_metal_alloy">New Metal Alloy</string>
    <string name="alloy_name">Alloy Name:</string>
    <string name="aluminum">Aluminum</string>
    <string name="titanium_content">Titanium Content</string>
    <string name="zinc_content">Zinc Content</string>
    <string name="magnesium_content">Magnesium Content</string>
    <string name="manganese_content">Manganese Content</string>
    <string name="copper_content">Copper Content</string>
    <string name="iron_content">Iron Content</string>
    <string name="silicon_content">Silicon Content</string>
    <string name="electric_conductivity_iacs">Electric Conductivity (%IACS)</string>
    <string name="thermal_conductivity_w_mk">Thermal Conductivity (W/mK)</string>
    <string name="_100000">100000</string>
    <string name="silicon">Silicon</string>
    <string name="titanium">Titanium</string>
    <string name="zinc">Zinc</string>
    <string name="magnesium">Magnesium</string>
    <string name="manganese">Manganese</string>
    <string name="copper">Copper</string>
    <string name="iron">Iron</string>
    <string name="_0_00">0.00</string>
    <string name="dash">-</string>
    <string name="fill_time">Fill Time:</string>
    <string name="s">s</string>
    <string name="volume_in3">Volume (in3):</string>
    <string name="in3">in3</string>
    <string name="in2">in2</string>
    <string name="in_s">in/s</string>
    <string name="plunger_diameter_in">Plunger Diameter (in):</string>
    <string name="shot_sleeve_length_in">Shot Sleeve Length (in):</string>
    <string name="developed_by_ved_ameresh_for_flm_inc">Developed by Ved Ameresh for FLM Inc.</string>
</resources>
